// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Dropdown baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
      >
        
        更多
        
        <svg
          class="t-icon t-icon-chevron-down"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown buttonVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square"
    type="button"
  >
    <span
      class="t-button__text"
    >
      <svg
        class="t-icon t-icon-ellipsis"
      >
        <use
          href="#t-icon-ellipsis"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown customVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
      >
        
        下拉菜单
        
        <svg
          class="t-icon t-icon-chevron-down"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown eventVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown longVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
      >
        
        下拉菜单
        
        <svg
          class="t-icon t-icon-chevron-down"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown Dropdown slotVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-vertical"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <h4>
          支持直接使用 t-dropdown-menu
        </h4>
      </div>
      <div
        class="t-space-item"
      >
        <span>
          <button
            class="t-button t-size-m t-button--variant-text t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              下拉菜单
            </span>
          </button>
           
          <div
            class="t-dropdown__menu t-dropdown__menu--right"
            style="max-height: 300px;"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-vertical"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <h4>
          兼容历史版本 通过 dropdown 具名插槽的使用
        </h4>
      </div>
      <div
        class="t-space-item"
      >
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            下拉菜单
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown Dropdown splitVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;
